--- a/src/components/Projects/Project/index.scss
+++ b/src/components/Projects/Project/index.scss
@@ -7,7 +7,7 @@
 
     a {
         text-decoration: none;
-        color: inherit;
+        color: #fff;
 
         p {
             display: none;
